// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPathsInfo ethane min:2, max:2 1`] = `
Array [
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 4,
    "allHydrogens": 3,
    "atomicNo": 6,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 1,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 3,
      "doubleBonds": 0,
      "singleBonds": 4,
      "totalBonds": 4,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "C",
    "mass": 0,
    "oclID": "eF@HpLQP_iHNET",
    "paths": Array [],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": 0.8660254037844387,
    "y": 0,
    "z": 0,
  },
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 4,
    "allHydrogens": 3,
    "atomicNo": 6,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 1,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 3,
      "doubleBonds": 0,
      "singleBonds": 4,
      "totalBonds": 4,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "C",
    "mass": 0,
    "oclID": "eF@HpLQP_iHNET",
    "paths": Array [],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": 0,
    "y": 0.5,
    "z": 0,
  },
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 1,
    "allHydrogens": 0,
    "atomicNo": 1,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 1,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 0,
      "doubleBonds": 0,
      "hydrogenOnAtomicNo": 6,
      "singleBonds": 1,
      "totalBonds": 1,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "H",
    "mass": 0,
    "oclID": "eMBBYRZA~d\`bUP",
    "paths": Array [
      Object {
        "atoms": Array [
          2,
          0,
          3,
        ],
        "from": 2,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gC\`DALjYRZhA~bPHeTdRj@",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 3,
        "torsion": undefined,
      },
      Object {
        "atoms": Array [
          2,
          0,
          4,
        ],
        "from": 2,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gC\`DALjYRZhA~bPHeTdRj@",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 4,
        "torsion": undefined,
      },
    ],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": 1.4722431864335457,
    "y": -0.35,
    "z": 0,
  },
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 1,
    "allHydrogens": 0,
    "atomicNo": 1,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 1,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 0,
      "doubleBonds": 0,
      "hydrogenOnAtomicNo": 6,
      "singleBonds": 1,
      "totalBonds": 1,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "H",
    "mass": 0,
    "oclID": "eMBBYRZA~d\`bUP",
    "paths": Array [
      Object {
        "atoms": Array [
          3,
          0,
          2,
        ],
        "from": 3,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gC\`DALjYRZhA~bPHeTdRj@",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 2,
        "torsion": undefined,
      },
      Object {
        "atoms": Array [
          3,
          0,
          4,
        ],
        "from": 3,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gC\`DALjYRZhA~bPHeTdRj@",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 4,
        "torsion": undefined,
      },
    ],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": 1.2160254037844387,
    "y": 0.6062177826491071,
    "z": 0,
  },
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 1,
    "allHydrogens": 0,
    "atomicNo": 1,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 1,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 0,
      "doubleBonds": 0,
      "hydrogenOnAtomicNo": 6,
      "singleBonds": 1,
      "totalBonds": 1,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "H",
    "mass": 0,
    "oclID": "eMBBYRZA~d\`bUP",
    "paths": Array [
      Object {
        "atoms": Array [
          4,
          0,
          2,
        ],
        "from": 4,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gC\`DALjYRZhA~bPHeTdRj@",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 2,
        "torsion": undefined,
      },
      Object {
        "atoms": Array [
          4,
          0,
          3,
        ],
        "from": 4,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gC\`DALjYRZhA~bPHeTdRj@",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 3,
        "torsion": undefined,
      },
    ],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": 0.5160254037844387,
    "y": -0.6062177826491071,
    "z": 0,
  },
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 1,
    "allHydrogens": 0,
    "atomicNo": 1,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 1,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 0,
      "doubleBonds": 0,
      "hydrogenOnAtomicNo": 6,
      "singleBonds": 1,
      "totalBonds": 1,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "H",
    "mass": 0,
    "oclID": "eMBBYRZA~d\`bUP",
    "paths": Array [
      Object {
        "atoms": Array [
          5,
          1,
          6,
        ],
        "from": 5,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gC\`DALjYRZhA~bPHeTdRj@",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 6,
        "torsion": undefined,
      },
      Object {
        "atoms": Array [
          5,
          1,
          7,
        ],
        "from": 5,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gC\`DALjYRZhA~bPHeTdRj@",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 7,
        "torsion": undefined,
      },
    ],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": -0.6062177826491071,
    "y": 0.85,
    "z": 0,
  },
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 1,
    "allHydrogens": 0,
    "atomicNo": 1,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 1,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 0,
      "doubleBonds": 0,
      "hydrogenOnAtomicNo": 6,
      "singleBonds": 1,
      "totalBonds": 1,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "H",
    "mass": 0,
    "oclID": "eMBBYRZA~d\`bUP",
    "paths": Array [
      Object {
        "atoms": Array [
          6,
          1,
          5,
        ],
        "from": 6,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gC\`DALjYRZhA~bPHeTdRj@",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 5,
        "torsion": undefined,
      },
      Object {
        "atoms": Array [
          6,
          1,
          7,
        ],
        "from": 6,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gC\`DALjYRZhA~bPHeTdRj@",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 7,
        "torsion": undefined,
      },
    ],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": -0.35,
    "y": -0.10621778264910708,
    "z": 0,
  },
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 1,
    "allHydrogens": 0,
    "atomicNo": 1,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 1,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 0,
      "doubleBonds": 0,
      "hydrogenOnAtomicNo": 6,
      "singleBonds": 1,
      "totalBonds": 1,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "H",
    "mass": 0,
    "oclID": "eMBBYRZA~d\`bUP",
    "paths": Array [
      Object {
        "atoms": Array [
          7,
          1,
          5,
        ],
        "from": 7,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gC\`DALjYRZhA~bPHeTdRj@",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 5,
        "torsion": undefined,
      },
      Object {
        "atoms": Array [
          7,
          1,
          6,
        ],
        "from": 7,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gC\`DALjYRZhA~bPHeTdRj@",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 6,
        "torsion": undefined,
      },
    ],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": 0.35,
    "y": 1.106217782649107,
    "z": 0,
  },
]
`;

exports[`getPathsInfo propane min:1, max:3 1`] = `
Array [
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 4,
    "allHydrogens": 3,
    "atomicNo": 6,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 1,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 3,
      "doubleBonds": 0,
      "singleBonds": 4,
      "totalBonds": 4,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "C",
    "mass": 0,
    "oclID": "eMHAIhFIhOtdWBj@",
    "paths": Array [],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": 1.7320508075688774,
    "y": 0.5,
    "z": 0,
  },
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 4,
    "allHydrogens": 2,
    "atomicNo": 6,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 2,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 3,
      "doubleBonds": 0,
      "singleBonds": 4,
      "totalBonds": 4,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "C",
    "mass": 0,
    "oclID": "eMHAIhFJhOtdgBj@",
    "paths": Array [],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": 0.8660254037844387,
    "y": 0,
    "z": 0,
  },
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 2,
    "allHydrogens": 1,
    "atomicNo": 8,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 1,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 3,
      "doubleBonds": 0,
      "singleBonds": 2,
      "totalBonds": 2,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "O",
    "mass": 0,
    "oclID": "eMHAIhFHhOtdGrj@",
    "paths": Array [],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": 0,
    "y": 0.5,
    "z": 0,
  },
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 1,
    "allHydrogens": 0,
    "atomicNo": 1,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 1,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 0,
      "doubleBonds": 0,
      "hydrogenOnAtomicNo": 6,
      "singleBonds": 1,
      "totalBonds": 1,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "H",
    "mass": 0,
    "oclID": "gCaHLIeIZ\`GzQ@bUP",
    "paths": Array [
      Object {
        "atoms": Array [
          3,
          0,
          4,
        ],
        "from": 3,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDBIeSJS]TA|iFs}D\`QJiHeT",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 4,
        "torsion": undefined,
      },
      Object {
        "atoms": Array [
          3,
          0,
          5,
        ],
        "from": 3,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDBIeSJS]TA|iFs}D\`QJiHeT",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 5,
        "torsion": undefined,
      },
      Object {
        "atoms": Array [
          3,
          0,
          1,
          6,
        ],
        "from": 3,
        "hoses": Array [
          Object {
            "oclID": "gC\`DALzYRVhC~bPHeUdRj@",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPOeHv_hdBIUEDj\`",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPGzI@bUQQJh",
            "sphere": 2,
          },
        ],
        "length": 3,
        "to": 6,
        "torsion": -0,
      },
      Object {
        "atoms": Array [
          3,
          0,
          1,
          7,
        ],
        "from": 3,
        "hoses": Array [
          Object {
            "oclID": "gC\`DALzYRVhC~bPHeUdRj@",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPOeHv_hdBIUEDj\`",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPGzI@bUQQJh",
            "sphere": 2,
          },
        ],
        "length": 3,
        "to": 7,
        "torsion": -0,
      },
    ],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": 2.3382685902179845,
    "y": 0.85,
    "z": 0,
  },
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 1,
    "allHydrogens": 0,
    "atomicNo": 1,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 1,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 0,
      "doubleBonds": 0,
      "hydrogenOnAtomicNo": 6,
      "singleBonds": 1,
      "totalBonds": 1,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "H",
    "mass": 0,
    "oclID": "gCaHLIeIZ\`GzQ@bUP",
    "paths": Array [
      Object {
        "atoms": Array [
          4,
          0,
          3,
        ],
        "from": 4,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDBIeSJS]TA|iFs}D\`QJiHeT",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 3,
        "torsion": undefined,
      },
      Object {
        "atoms": Array [
          4,
          0,
          5,
        ],
        "from": 4,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDBIeSJS]TA|iFs}D\`QJiHeT",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 5,
        "torsion": undefined,
      },
      Object {
        "atoms": Array [
          4,
          0,
          1,
          6,
        ],
        "from": 4,
        "hoses": Array [
          Object {
            "oclID": "gC\`DALzYRVhC~bPHeUdRj@",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPOeHv_hdBIUEDj\`",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPGzI@bUQQJh",
            "sphere": 2,
          },
        ],
        "length": 3,
        "to": 6,
        "torsion": -3.141592653589793,
      },
      Object {
        "atoms": Array [
          4,
          0,
          1,
          7,
        ],
        "from": 4,
        "hoses": Array [
          Object {
            "oclID": "gC\`DALzYRVhC~bPHeUdRj@",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPOeHv_hdBIUEDj\`",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPGzI@bUQQJh",
            "sphere": 2,
          },
        ],
        "length": 3,
        "to": 7,
        "torsion": -3.141592653589793,
      },
    ],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": 1.3820508075688775,
    "y": 1.106217782649107,
    "z": 0,
  },
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 1,
    "allHydrogens": 0,
    "atomicNo": 1,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 1,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 0,
      "doubleBonds": 0,
      "hydrogenOnAtomicNo": 6,
      "singleBonds": 1,
      "totalBonds": 1,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "H",
    "mass": 0,
    "oclID": "gCaHLIeIZ\`GzQ@bUP",
    "paths": Array [
      Object {
        "atoms": Array [
          5,
          0,
          3,
        ],
        "from": 5,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDBIeSJS]TA|iFs}D\`QJiHeT",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 3,
        "torsion": undefined,
      },
      Object {
        "atoms": Array [
          5,
          0,
          4,
        ],
        "from": 5,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gC\`DALjYRZhCzROtRADjdbUP",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDBIeSJS]TA|iFs}D\`QJiHeT",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 4,
        "torsion": undefined,
      },
      Object {
        "atoms": Array [
          5,
          0,
          1,
          6,
        ],
        "from": 5,
        "hoses": Array [
          Object {
            "oclID": "gC\`DALzYRVhC~bPHeUdRj@",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPOeHv_hdBIUEDj\`",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPGzI@bUQQJh",
            "sphere": 2,
          },
        ],
        "length": 3,
        "to": 6,
        "torsion": -0,
      },
      Object {
        "atoms": Array [
          5,
          0,
          1,
          7,
        ],
        "from": 5,
        "hoses": Array [
          Object {
            "oclID": "gC\`DALzYRVhC~bPHeUdRj@",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPOeHv_hdBIUEDj\`",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPGzI@bUQQJh",
            "sphere": 2,
          },
        ],
        "length": 3,
        "to": 7,
        "torsion": -0,
      },
    ],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": 2.0820508075688773,
    "y": -0.10621778264910708,
    "z": 0,
  },
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 1,
    "allHydrogens": 0,
    "atomicNo": 1,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 1,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 0,
      "doubleBonds": 0,
      "hydrogenOnAtomicNo": 6,
      "singleBonds": 1,
      "totalBonds": 1,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "H",
    "mass": 0,
    "oclID": "gCaHDIeIjiJ@RHDRj@",
    "paths": Array [
      Object {
        "atoms": Array [
          6,
          1,
          0,
          3,
        ],
        "from": 6,
        "hoses": Array [
          Object {
            "oclID": "gC\`DALzYRVhC~bPHeUdRj@",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPOeHv_hdBIUEDj\`",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPGzI@bUQQJh",
            "sphere": 2,
          },
        ],
        "length": 3,
        "to": 3,
        "torsion": -0,
      },
      Object {
        "atoms": Array [
          6,
          1,
          0,
          4,
        ],
        "from": 6,
        "hoses": Array [
          Object {
            "oclID": "gC\`DALzYRVhC~bPHeUdRj@",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPOeHv_hdBIUEDj\`",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPGzI@bUQQJh",
            "sphere": 2,
          },
        ],
        "length": 3,
        "to": 4,
        "torsion": -3.141592653589793,
      },
      Object {
        "atoms": Array [
          6,
          1,
          0,
          5,
        ],
        "from": 6,
        "hoses": Array [
          Object {
            "oclID": "gC\`DALzYRVhC~bPHeUdRj@",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPOeHv_hdBIUEDj\`",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPGzI@bUQQJh",
            "sphere": 2,
          },
        ],
        "length": 3,
        "to": 5,
        "torsion": 0,
      },
      Object {
        "atoms": Array [
          6,
          1,
          7,
        ],
        "from": 6,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDLIeSJSUTAQHDRjRIU@",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDLIeSJSUT@QHDRjRIU@",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 7,
        "torsion": undefined,
      },
      Object {
        "atoms": Array [
          6,
          1,
          2,
          8,
        ],
        "from": 6,
        "hoses": Array [
          Object {
            "oclID": "gCaDHIgSJRu@_tRADjlbUP",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDHIgSJRuUDPOhhQHDRjrIU@",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDHIgSJRuUDPGzI@bUVQJh",
            "sphere": 2,
          },
        ],
        "length": 3,
        "to": 8,
        "torsion": 3.141592653589793,
      },
    ],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": 1.2160254037844387,
    "y": -0.6062177826491071,
    "z": 0,
  },
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 1,
    "allHydrogens": 0,
    "atomicNo": 1,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 1,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 0,
      "doubleBonds": 0,
      "hydrogenOnAtomicNo": 6,
      "singleBonds": 1,
      "totalBonds": 1,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "H",
    "mass": 0,
    "oclID": "gCaHDIeIjiJ@RHDRj@",
    "paths": Array [
      Object {
        "atoms": Array [
          7,
          1,
          0,
          3,
        ],
        "from": 7,
        "hoses": Array [
          Object {
            "oclID": "gC\`DALzYRVhC~bPHeUdRj@",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPOeHv_hdBIUEDj\`",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPGzI@bUQQJh",
            "sphere": 2,
          },
        ],
        "length": 3,
        "to": 3,
        "torsion": -0,
      },
      Object {
        "atoms": Array [
          7,
          1,
          0,
          4,
        ],
        "from": 7,
        "hoses": Array [
          Object {
            "oclID": "gC\`DALzYRVhC~bPHeUdRj@",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPOeHv_hdBIUEDj\`",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPGzI@bUQQJh",
            "sphere": 2,
          },
        ],
        "length": 3,
        "to": 4,
        "torsion": -3.141592653589793,
      },
      Object {
        "atoms": Array [
          7,
          1,
          0,
          5,
        ],
        "from": 7,
        "hoses": Array [
          Object {
            "oclID": "gC\`DALzYRVhC~bPHeUdRj@",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPOeHv_hdBIUEDj\`",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDDIdsJS]UIPGzI@bUQQJh",
            "sphere": 2,
          },
        ],
        "length": 3,
        "to": 5,
        "torsion": -0,
      },
      Object {
        "atoms": Array [
          7,
          1,
          6,
        ],
        "from": 7,
        "hoses": Array [
          Object {
            "oclID": "eMABYYeIhOzJBIUJIU@",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDLIeSJSUTAQHDRjRIU@",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDLIeSJSUT@QHDRjRIU@",
            "sphere": 2,
          },
        ],
        "length": 2,
        "to": 6,
        "torsion": undefined,
      },
      Object {
        "atoms": Array [
          7,
          1,
          2,
          8,
        ],
        "from": 7,
        "hoses": Array [
          Object {
            "oclID": "gCaDHIgSJRu@_tRADjlbUP",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDHIgSJRuUDPOhhQHDRjrIU@",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDHIgSJRuUDPGzI@bUVQJh",
            "sphere": 2,
          },
        ],
        "length": 3,
        "to": 8,
        "torsion": -3.141592653589793,
      },
    ],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": 0.5160254037844387,
    "y": -0.6062177826491071,
    "z": 0,
  },
  Object {
    "abnormalValence": -1,
    "allConnAtoms": 1,
    "allHydrogens": 0,
    "atomicNo": 1,
    "charge": 0,
    "cipParity": 0,
    "color": 0,
    "connAtoms": 1,
    "customLabel": null,
    "extra": Object {
      "aromaticBonds": 0,
      "cnoHybridation": 0,
      "doubleBonds": 0,
      "hydrogenOnAtomicNo": 8,
      "labileHydrogen": true,
      "singleBonds": 1,
      "totalBonds": 1,
      "tripleBonds": 0,
    },
    "implicitHydrogens": 0,
    "isAllylic": false,
    "isAromatic": false,
    "isRing": false,
    "isSmallRing": false,
    "isStabilized": false,
    "isStereoCenter": false,
    "label": "H",
    "mass": 0,
    "oclID": "gCaHHIeIZ\`GzQ@bUP",
    "paths": Array [
      Object {
        "atoms": Array [
          8,
          2,
          1,
          6,
        ],
        "from": 8,
        "hoses": Array [
          Object {
            "oclID": "gCaDHIgSJRu@_tRADjlbUP",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDHIgSJRuUDPOhhQHDRjrIU@",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDHIgSJRuUDPGzI@bUVQJh",
            "sphere": 2,
          },
        ],
        "length": 3,
        "to": 6,
        "torsion": -3.141592653589793,
      },
      Object {
        "atoms": Array [
          8,
          2,
          1,
          7,
        ],
        "from": 8,
        "hoses": Array [
          Object {
            "oclID": "gCaDHIgSJRu@_tRADjlbUP",
            "sphere": 0,
          },
          Object {
            "oclID": "gJQDHIgSJRuUDPOhhQHDRjrIU@",
            "sphere": 1,
          },
          Object {
            "oclID": "gJQDHIgSJRuUDPGzI@bUVQJh",
            "sphere": 2,
          },
        ],
        "length": 3,
        "to": 7,
        "torsion": -3.141592653589793,
      },
    ],
    "radical": 0,
    "ringBondCount": 0,
    "ringSize": 0,
    "x": -0.25881904510252085,
    "y": 1.4659258262890682,
    "z": 0,
  },
]
`;
